<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.pas</groupId>
  <artifactId>golfScoring</artifactId>
  <packaging>war</packaging>
  <version>2.0.1</version>
  
  <name>golfScoring Maven Webapp</name>
  <url>http://maven.apache.org</url>
  
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>    
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  
  <dependencies>  
   
   	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-api</artifactId>
	    <version>2.17.2</version>
	</dependency>
	
	<dependency>
	    <groupId>org.apache.logging.log4j</groupId>
	    <artifactId>log4j-core</artifactId>
	    <version>2.17.2</version>
	</dependency>
	
	<dependency>
	    <groupId>commons-fileupload</groupId>
	    <artifactId>commons-fileupload</artifactId>
	    <version>1.3.3</version>
	</dependency>
	
	<dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.6</version>
    </dependency>
   	
	<dependency>
	    <groupId>org.glassfish</groupId>
    	<artifactId>jakarta.faces</artifactId>
    	<version>4.0.5</version>
	</dependency>
	 
	<dependency>
		<groupId>org.primefaces</groupId>
    	<artifactId>primefaces</artifactId>
    	<version>13.0.3</version>
    	<classifier>jakarta</classifier>
	</dependency>
	
	<dependency>
	    <groupId>org.primefaces.extensions</groupId>
	    <artifactId>primefaces-extensions</artifactId>
	    <version>13.0.3</version>
    	<classifier>jakarta</classifier>
	</dependency>
	
	<dependency>
         <groupId>org.jboss.weld.servlet</groupId>
    	<artifactId>weld-servlet-core</artifactId>
    	<version>6.0.0.Alpha1</version>
    </dependency>
 
	<dependency>
	    <groupId>org.jboss</groupId>
	    <artifactId>jandex</artifactId>
	    <version>3.1.6</version>
	</dependency>

	<dependency>
	    <groupId>org.springframework.security</groupId>
	    <artifactId>spring-security-web</artifactId>
	    <version>6.2.0</version>
	</dependency>
	
	<dependency>
	    <groupId>org.springframework.security</groupId>
	    <artifactId>spring-security-config</artifactId>
	    <version>6.2.0</version>
	</dependency>
	
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-jdbc</artifactId>
	    <version>6.1.1</version>
	</dependency>
	
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-webmvc</artifactId>
	    <version>6.1.1</version>
	</dependency>
	
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-jcl</artifactId>
	    <version>6.1.1</version>
	</dependency>

	<dependency>
	    <groupId>com.sun.mail</groupId>
	    <artifactId>javax.mail</artifactId>
	    <version>1.5.6</version>
	</dependency> 
	
	<dependency>
	    <groupId>net.aksingh</groupId>
	    <artifactId>owm-japis</artifactId>
	    <version>2.5.3.0</version>
	</dependency>
	
	<dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>8.0.20</version>
	</dependency>

	<!-- PROVIDED SCOPE - Server Runtime libraries -->
    <dependency>
        <groupId>jakarta.servlet</groupId>
    	<artifactId>jakarta.servlet-api</artifactId>
    	<version>6.0.0</version>
    	<scope>provided</scope>
    </dependency>
    
    <dependency>
        <groupId>jakarta.el</groupId>
    	<artifactId>jakarta.el-api</artifactId>
    	<version>6.0.0-M1</version>
    	<scope>provided</scope>
    </dependency>
              
  </dependencies>
  
  <build>
    <finalName>golfScoring</finalName>  
    <plugins>
       <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.7.0</version>
          <configuration>
             <source>1.8</source>
             <target>1.8</target>
          </configuration>
       </plugin>
       <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-war-plugin</artifactId>
			<version>3.2.3</version>
		</plugin>
    </plugins>
   </build>
  
</project>
